# LlamaCpp_deploy

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: main.cpp  main_copy.cpp
include/: param copy.json  param_json copy.hpp  param_json.hpp  param_new.json  param_new1.json  param_new2.json  param_new3.json  param_new4.json
install/llm/: llm_demo
